v10/docs/ModelsCertificateLocationSpecifier.md
# ModelsCertificateLocationSpecifier

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Alias** | Pointer to **string** |  | [optional] 
**CertificateStoreId** | Pointer to **string** |  | [optional] 
**JobFields** | Pointer to **map[string]map[string]interface{}** |  | [optional] 

## Methods

### NewModelsCertificateLocationSpecifier

`func NewModelsCertificateLocationSpecifier() *ModelsCertificateLocationSpecifier`

NewModelsCertificateLocationSpecifier instantiates a new ModelsCertificateLocationSpecifier object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateLocationSpecifierWithDefaults

`func NewModelsCertificateLocationSpecifierWithDefaults() *ModelsCertificateLocationSpecifier`

NewModelsCertificateLocationSpecifierWithDefaults instantiates a new ModelsCertificateLocationSpecifier object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetAlias

`func (o *ModelsCertificateLocationSpecifier) GetAlias() string`

GetAlias returns the Alias field if non-nil, zero value otherwise.

### GetAliasOk

`func (o *ModelsCertificateLocationSpecifier) GetAliasOk() (*string, bool)`

GetAliasOk returns a tuple with the Alias field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAlias

`func (o *ModelsCertificateLocationSpecifier) SetAlias(v string)`

SetAlias sets Alias field to given value.

### HasAlias

`func (o *ModelsCertificateLocationSpecifier) HasAlias() bool`

HasAlias returns a boolean if a field has been set.

### GetCertificateStoreId

`func (o *ModelsCertificateLocationSpecifier) GetCertificateStoreId() string`

GetCertificateStoreId returns the CertificateStoreId field if non-nil, zero value otherwise.

### GetCertificateStoreIdOk

`func (o *ModelsCertificateLocationSpecifier) GetCertificateStoreIdOk() (*string, bool)`

GetCertificateStoreIdOk returns a tuple with the CertificateStoreId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertificateStoreId

`func (o *ModelsCertificateLocationSpecifier) SetCertificateStoreId(v string)`

SetCertificateStoreId sets CertificateStoreId field to given value.

### HasCertificateStoreId

`func (o *ModelsCertificateLocationSpecifier) HasCertificateStoreId() bool`

HasCertificateStoreId returns a boolean if a field has been set.

### GetJobFields

`func (o *ModelsCertificateLocationSpecifier) GetJobFields() map[string]map[string]interface{}`

GetJobFields returns the JobFields field if non-nil, zero value otherwise.

### GetJobFieldsOk

`func (o *ModelsCertificateLocationSpecifier) GetJobFieldsOk() (*map[string]map[string]interface{}, bool)`

GetJobFieldsOk returns a tuple with the JobFields field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetJobFields

`func (o *ModelsCertificateLocationSpecifier) SetJobFields(v map[string]map[string]interface{})`

SetJobFields sets JobFields field to given value.

### HasJobFields

`func (o *ModelsCertificateLocationSpecifier) HasJobFields() bool`

HasJobFields returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


